Ensure that radio buttons are vertically aligned too.

--- a/multiple-select.css
+++ b/multiple-select.css
@@ -182,7 +182,8 @@
     font-weight: bold;
 }
 
-.ms-drop input[type="checkbox"] {
+.ms-drop input[type="checkbox"],
+.ms-drop input[type="radio"] {
     vertical-align: middle;
 }
 
